--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,13 +7,30 @@ http {
     default_type  application/octet-stream;
 
     server {
-        listen 80;
-        server_name localhost;
+  listen 80;
+  root /data/stellar-archive/node001/;
 
-        location /history/ {
-            root /usr/share/nginx/html;
-            autoindex on;
-            try_files $uri $uri/ =404;
-        }
-    }
+  # EDIT ME: replace `history.core-live-a.example.com` with your domain
+  server_name history.core-live-a.example.com;
+
+  # do not cache 404 errors
+  error_page 404 /404.html;
+  location = /404.html {
+    add_header Cache-Control "no-cache" always;
+  }
+
+  # do not cache history state file
+  location ~ ^/.well-known/stellar-history.json$ {
+    add_header Cache-Control "no-cache" always;
+    try_files $uri =404;
+  }
+
+  # cache entire history archive for 1 day
+  location / {
+     add_header Cache-Control "max-age=86400";
+     try_files $uri =404;
+  }
 }
+}
+
+
