add lets encrypt

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,10 +8,35 @@ http {
 
     server {
         listen 80;
-        root /data/stellar-archive/node001/;
-
-        # EDIT ME: replace `history.core-live-a.example.com` with your domain
         server_name history.core-live-a.example.com;
+        
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name history.core-live-a.example.com;
+
+        ssl_certificate /etc/letsencrypt/live/history.core-live-a.example.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/history.core-live-a.example.com/privkey.pem;
+        
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_session_tickets off;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        
+        root /data/stellar-archive/node001/;
 
         # do not cache 404 errors
         error_page 404 /404.html;
